--- a/now.json
+++ b/now.json
@@ -1,5 +1,11 @@
 {
   "routes": [
+    { "src": "/index.css", "dest": "/index.css" },
+    { "src": "/favicon.ico", "dest": "/favicon.ico" },
+    { "src": "/api/actions/create", "dest": "/api/actions/create.js" },
+    { "src": "/(?<url>https?://.+)", "dest": "/api/actions/create?url=$url" },
+    { "src": "/[^+]+\\+$", "dest": "/api/views/info.js" },
+    { "src": "/[^+]+", "dest": "/api/views/redirect.js" },
     { "src": "/", "dest": "/api/views/create.js" }
   ]
 }
