--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "concurrently 'npm:dev:*'",
     "prod": "babel src -d api"
   },
-  "main": "build/server.js",
   "dependencies": {
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
@@ -20,6 +19,10 @@
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "ava": "^2.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2"
   }
