--- a/now.json
+++ b/now.json
@@ -6,8 +6,8 @@
     { "src": "/api/actions/create", "dest": "/api/actions/create.js" },
     { "src": "/enter", "dest": "/api/views/enter.js" },
     { "src": "/info", "dest": "/api/views/info.js" },
-    { "src": "/(?<url>https?:/.+)", "dest": "/api/actions/create?url=$url" },
-    { "src": "/(?<url>.+\\..+)", "dest": "/api/actions/create?url=$url" },
+    { "src": "/(https?:/.+)", "dest": "/api/actions/create" },
+    { "src": "/(.+\\..+)", "dest": "/api/actions/create" },
     { "src": "/[^+]+\\+$", "dest": "/api/views/plus.js" },
     { "src": "/[^+]+", "dest": "/api/views/redirect.js" },
     { "src": "/", "dest": "/api/views/create.js" }
