--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
   "private": true,
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "dev:babel": "babel -w --ignore 'api/**/*' -d api src",
-    "dev:now": "now dev",
+    "dev:vercel": "vercel dev",
     "start": "concurrently 'npm:dev:*'",
-    "prod": "babel src -d api"
+    "prod": "babel src -d api",
+    "test": "ava"
   },
   "dependencies": {
-    "concurrently": "^5.1.0",
-    "express": "^4.17.1",
     "mongodb": "^3.3.0",
-    "now": "^17.0.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "ava": "^3.5.0",
+    "ava": "^5.0.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "nodemon": "^1.19.1",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "vercel": "^28.4.17"
   }
 }
