--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   },
   "scripts": {
     "dev:babel": "babel -w --ignore 'api/**/*' -d api src",
-    "dev:vercel": "vercel dev",
     "start": "concurrently 'npm:dev:*'",
     "prod": "babel src -d api",
     "test": "ava"
@@ -25,7 +24,6 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
-    "prettier": "^1.18.2",
-    "vercel": "^28.4.17"
+    "prettier": "^1.18.2"
   }
 }
